fix - Update makeCommitLabels to use branch_map for branch retrieval. - Refactor on_tableWidget_log_itemDoubleClicked to on_tableWidget_log_doubleClicked.

--- a/src/MainWindow.ui
+++ b/src/MainWindow.ui
@@ -1808,7 +1808,7 @@
   </customwidget>
   <customwidget>
    <class>CommitLogTableWidget</class>
-   <extends>QTableWidget</extends>
+   <extends>QTableView</extends>
    <header>CommitLogTableWidget.h</header>
   </customwidget>
   <customwidget>
