--- a/src/MainWindow.ui
+++ b/src/MainWindow.ui
@@ -984,7 +984,73 @@
              </item>
             </layout>
            </widget>
-           <widget class="QWidget" name="page_message_panel"/>
+           <widget class="QWidget" name="page_message_panel">
+            <layout class="QVBoxLayout" name="verticalLayout_12">
+             <property name="spacing">
+              <number>0</number>
+             </property>
+             <property name="leftMargin">
+              <number>0</number>
+             </property>
+             <property name="topMargin">
+              <number>0</number>
+             </property>
+             <property name="rightMargin">
+              <number>0</number>
+             </property>
+             <property name="bottomMargin">
+              <number>0</number>
+             </property>
+             <item>
+              <spacer name="verticalSpacer_3">
+               <property name="orientation">
+                <enum>Qt::Orientation::Vertical</enum>
+               </property>
+               <property name="sizeHint" stdset="0">
+                <size>
+                 <width>20</width>
+                 <height>88</height>
+                </size>
+               </property>
+              </spacer>
+             </item>
+             <item>
+              <widget class="ProgressWidget" name="widget_progress" native="true">
+               <property name="sizePolicy">
+                <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+                 <horstretch>0</horstretch>
+                 <verstretch>0</verstretch>
+                </sizepolicy>
+               </property>
+               <property name="minimumSize">
+                <size>
+                 <width>0</width>
+                 <height>20</height>
+                </size>
+               </property>
+               <property name="maximumSize">
+                <size>
+                 <width>16777215</width>
+                 <height>20</height>
+                </size>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <spacer name="verticalSpacer_4">
+               <property name="orientation">
+                <enum>Qt::Orientation::Vertical</enum>
+               </property>
+               <property name="sizeHint" stdset="0">
+                <size>
+                 <width>20</width>
+                 <height>88</height>
+                </size>
+               </property>
+              </spacer>
+             </item>
+            </layout>
+           </widget>
            <widget class="QWidget" name="page_files">
             <layout class="QVBoxLayout" name="verticalLayout">
              <property name="leftMargin">
@@ -1061,7 +1127,7 @@
      <x>0</x>
      <y>0</y>
      <width>1023</width>
-     <height>25</height>
+     <height>22</height>
     </rect>
    </property>
    <widget class="QMenu" name="menu_File">
@@ -1843,6 +1909,12 @@
    <class>RepositoryTreeWidget</class>
    <extends>QTreeWidget</extends>
    <header>RepositoryTreeWidget.h</header>
+  </customwidget>
+  <customwidget>
+   <class>ProgressWidget</class>
+   <extends>QWidget</extends>
+   <header>ProgressWidget.h</header>
+   <container>1</container>
   </customwidget>
  </customwidgets>
  <tabstops>
